cmake_minimum_required(VERSION 3.28)
project(Leetcode_Solutions)

set(CMAKE_CXX_STANDARD 17)

#STACK LIST
#add_executable(Leetcode_Solutions Stack/Car-Fleet_M.cpp)
#add_executable(Leetcode_Solutions Stack/Daily_Temperatures_M.cpp)
#add_executable(Leetcode_Solutions Stack/Evaluate_RPM_M.cpp)
#add_executable(Leetcode_Solutions Stack/Min_Stack_M.cpp)
add_executable(Leetcode_Solutions Stack/Largest-Rectangle-in-Histogram_h.cpp)