cmake_minimum_required(VERSION 3.28)
project(Leetcode_Solutions)

set(CMAKE_CXX_STANDARD 17)

#STACK LIST
#add_executable(Leetcode_Solutions Stack/Car-Fleet_M.cpp)
#add_executable(Leetcode_Solutions Stack/Daily_Temperatures_M.cpp)
#add_executable(Leetcode_Solutions Stack/Evaluate_RPM_M.cpp)
#add_executable(Leetcode_Solutions Stack/Min_Stack_M.cpp)
#add_executable(Leetcode_Solutions Stack/Largest-Rectangle-in-Histogram_h.cpp)



######################        BINARY SEARCH
#add_executable(Leetcode_Solutions "Binary Search/Binary-Search_E.cpp")
#add_executable(Leetcode_Solutions "Binary Search/Median-of-Two-Sorted-Arrays_H.cpp")
#add_executable(Leetcode_Solutions "Binary Search/Koko-Eating-Bananas_M.cpp")


#add_executable(Leetcode_Solutions)
############         SLIDING WINDOW PROBLEMS
#add_executable(Leetcode_Solutions "Sliding-Window/Best_time-to-buy-and-sell-stock_E.cpp")
#add_executable(Leetcode_Solutions "Sliding-Window/Longest-Substring-Without-Repeating-Characters_M.cpp")
#add_executable(Leetcode_Solutions "Sliding-Window/Longest-Repeating-Character-Replacement.cpp")
#add_executable(Leetcode_Solutions "Sliding-Window/Permutations-in-String.cpp" )
#add_executable(Leetcode_Solutions "Sliding-Window/Minimum-Window-Substring_H.cpp")
#add_executable(Leetcode_Solutions "Linked-List/Reverse-Linked-List_E.cpp")
#add_executable(Leetcode_Solutions "Linked-List/Merge Two Sorted Linked Lists_E.cpp")
add_executable(Leetcode_Solutions "Linked-List/Reorder-List_M.cpp")
